Added migrations, prod config.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <section id="root"></section>
-  {{{ body }}}
+  <script>var __SESSION__ = {{{session}}};</script>
 </body>
 </html>
